fix:  update pom file for assert comptablity issue